--- a/src/resources/Login.fxml
+++ b/src/resources/Login.fxml
@@ -8,24 +8,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane
-        fx:controller="application.controller.LoginController"
-        prefHeight="400.0"
-        prefWidth="600.0"
-        maxHeight="400"
-        maxWidth="600"
-        xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="anchorPane" fx:id="anchorPane" maxHeight="400" maxWidth="600" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.LoginController">
     <VBox layoutX="183.0" layoutY="114.0" prefHeight="163.0" prefWidth="233.0" spacing="20.0">
         <Label text="Login">
             <font>
-                <Font name="System Bold" size="20.0"/>
+                <Font name="System Bold" size="20.0" />
             </font>
         </Label>
-        <TextField fx:id="txtUsername" prefHeight="290.0" prefWidth="233.0" promptText="Username"/>
-        <PasswordField fx:id="txtSenha" promptText="Senha" style="-fx-padding: 5px;"/>
-        <Button fx:id="btnEntrar" mnemonicParsing="false" onMouseClicked="#logar" prefHeight="32.0"
-                prefWidth="233.0" style="-fx-background-color: #8257e5; -fx-padding: 5px;" text="Entrar"
-                textFill="WHITE"/>
+        <TextField fx:id="txtUsername" prefHeight="290.0" prefWidth="233.0" promptText="Username" />
+        <PasswordField fx:id="txtSenha" promptText="Senha" style="-fx-padding: 5px;" />
+        <Button fx:id="btnEntrar" mnemonicParsing="false" onMouseClicked="#logar" prefHeight="32.0" prefWidth="233.0" style="-fx-background-color: #8257e5; -fx-padding: 5px;" text="Entrar" textFill="WHITE" />
     </VBox>
 </AnchorPane>
