--- a/src/resources/GerenciarFornecedor.fxml
+++ b/src/resources/GerenciarFornecedor.fxml
@@ -1,11 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.GerenciarFornecedor">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.GerenciarFornecedor">
    <children>
-      <Button fx:id="btnTeste1" layoutX="212.0" layoutY="72.0" mnemonicParsing="false" onAction="#teste1" text="Button" />
+      <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerenciar fornecedores">
+         <font>
+            <Font name="Corbel Light" size="17.0" />
+         </font>
+      </Text>
+      <TableView layoutX="14.0" layoutY="76.0" prefHeight="206.0" prefWidth="570.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="C1" />
+          <TableColumn prefWidth="75.0" text="C2" />
+        </columns>
+      </TableView>
+      <HBox layoutX="400.0" layoutY="48.0" prefHeight="27.0" prefWidth="184.0" spacing="10.0" AnchorPane.rightAnchor="16.0">
+         <children>
+            <Button mnemonicParsing="false" text="Adicionar" />
+            <Button mnemonicParsing="false" text="Editar" />
+            <Button mnemonicParsing="false" text="Excluir" />
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
