--- a/src/resources/Login.fxml
+++ b/src/resources/Login.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane id="anchorPane" fx:id="anchorPane" maxHeight="400" maxWidth="600" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.LoginController">
     <VBox layoutX="183.0" layoutY="114.0" prefHeight="163.0" prefWidth="233.0" spacing="20.0">
-        <Label text="Login">
+        <Label text="LOGIN">
             <font>
                 <Font name="System Bold" size="20.0" />
             </font>
@@ -19,4 +21,6 @@
         <PasswordField fx:id="txtSenha" promptText="Senha" style="-fx-padding: 5px;" />
         <Button fx:id="btnEntrar" mnemonicParsing="false" onMouseClicked="#logar" prefHeight="32.0" prefWidth="233.0" style="-fx-background-color: #8257e5; -fx-padding: 5px;" text="Entrar" textFill="WHITE" />
     </VBox>
+   <Text fill="#827f7f" layoutX="183.0" layoutY="313.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Não tem uma conta?" />
+   <Hyperlink layoutX="298.0" layoutY="297.0" onAction="#abrirCadastro" text="Cadastre-se" underline="true" />
 </AnchorPane>
