--- a/src/resources/GerenciarFornecedor.fxml
+++ b/src/resources/GerenciarFornecedor.fxml
@@ -1,32 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.GerenciarFornecedor">
+<AnchorPane prefHeight="576.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.GerenciarFornecedor">
    <children>
       <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerenciar fornecedores">
          <font>
             <Font name="Corbel Light" size="17.0" />
          </font>
       </Text>
-      <TableView layoutX="14.0" layoutY="76.0" prefHeight="206.0" prefWidth="570.0">
-        <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
-        </columns>
-      </TableView>
-      <HBox layoutX="400.0" layoutY="48.0" prefHeight="27.0" prefWidth="184.0" spacing="10.0" AnchorPane.rightAnchor="16.0">
+      <VBox alignment="TOP_RIGHT" layoutX="14.0" layoutY="60.0" prefHeight="200.0" prefWidth="571.0" spacing="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
          <children>
-            <Button mnemonicParsing="false" text="Adicionar" />
-            <Button mnemonicParsing="false" text="Editar" />
-            <Button mnemonicParsing="false" text="Excluir" />
+            <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="411.0" spacing="10.0">
+               <children>
+                  <Button fx:id="btnAdicionar" mnemonicParsing="false" onAction="#adicionar" text="Adicionar" />
+                  <Button fx:id="btnEditar" mnemonicParsing="false" onAction="#editar" text="Editar" />
+                  <Button fx:id="btnExcluir" mnemonicParsing="false" onAction="#excluir" text="Excluir" />
+               </children>
+            </HBox>
+            <TableView fx:id="tableViewFornecedor">
+              <columns>
+                <TableColumn fx:id="cNome" prefWidth="140.6666568517685" text="Nome" />
+                <TableColumn fx:id="cCNPJ" prefWidth="155.33331298828125" text="CNPJ" />
+                  <TableColumn fx:id="cEndereco" prefWidth="205.33331298828125" text="Endereço" />
+                  <TableColumn fx:id="cTempoEntrega" minWidth="-1.0" prefWidth="108.0" text="Tempo entrega" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
          </children>
-      </HBox>
+      </VBox>
+      <FlowPane fx:id="formularioPane" alignment="CENTER" hgap="10.0" layoutX="14.0" layoutY="269.0" prefHeight="269.0" prefWidth="573.0" vgap="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
+         <children>
+            <TextField fx:id="txtNome" prefHeight="25.0" prefWidth="285.0" promptText="Nome" />
+            <TextField fx:id="txtCNPJ" prefHeight="25.0" prefWidth="275.0" promptText="CNPJ" />
+            <TextField fx:id="txtEndereco" prefHeight="25.0" prefWidth="412.0" promptText="Endereço" />
+            <TextField fx:id="txtTempoEntrega" promptText="Tempo médio entrega" />
+            <ListView fx:id="listaProdutos" prefHeight="79.0" prefWidth="571.0" />
+            <TextArea fx:id="txtProdutos" prefHeight="73.0" prefWidth="571.0" promptText="Produtos (separados por ;)" />
+            <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="569.0" spacing="10.0">
+               <children>
+                  <Button fx:id="btnSalvar" mnemonicParsing="false" onAction="#salvar" text="Salvar" />
+                  <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
+               </children>
+            </HBox>
+         </children>
+      </FlowPane>
    </children>
 </AnchorPane>
