--- a/src/resources/Login.fxml
+++ b/src/resources/Login.fxml
@@ -19,7 +19,7 @@
         </Label>
         <TextField fx:id="txtUsername" prefHeight="290.0" prefWidth="233.0" promptText="Username" />
         <PasswordField fx:id="txtSenha" promptText="Senha" style="-fx-padding: 5px;" />
-        <Button fx:id="btnEntrar" mnemonicParsing="false" onMouseClicked="#logar" prefHeight="32.0" prefWidth="233.0" style="-fx-background-color: #8257e5; -fx-padding: 5px;" text="Entrar" textFill="WHITE" />
+        <Button fx:id="btnEntrar" mnemonicParsing="false" onAction="#logar" prefHeight="32.0" prefWidth="233.0" style="-fx-background-color: #8257e5; -fx-padding: 5px;" text="Entrar" textFill="WHITE" />
     </VBox>
    <Text fill="#827f7f" layoutX="183.0" layoutY="313.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Não tem uma conta?" />
    <Hyperlink layoutX="298.0" layoutY="297.0" onAction="#abrirCadastro" text="Cadastre-se" underline="true" />
