--- a/src/resources/Login.fxml
+++ b/src/resources/Login.fxml
@@ -6,21 +6,31 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="anchorPane" fx:id="anchorPane" maxHeight="400" maxWidth="600" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.LoginController">
-    <VBox layoutX="183.0" layoutY="114.0" prefHeight="163.0" prefWidth="233.0" spacing="20.0">
-        <Label text="LOGIN">
-            <font>
-                <Font name="System Bold" size="20.0" />
-            </font>
-        </Label>
-        <TextField fx:id="txtUsername" prefHeight="290.0" prefWidth="233.0" promptText="Username" />
-        <PasswordField fx:id="txtSenha" promptText="Senha" style="-fx-padding: 5px;" />
-        <Button fx:id="btnEntrar" mnemonicParsing="false" onAction="#logar" prefHeight="32.0" prefWidth="233.0" style="-fx-background-color: #8257e5; -fx-padding: 5px;" text="Entrar" textFill="WHITE" />
-    </VBox>
-   <Text fill="#827f7f" layoutX="183.0" layoutY="313.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Não tem uma conta?" />
-   <Hyperlink layoutX="298.0" layoutY="297.0" onAction="#abrirCadastro" text="Cadastre-se" underline="true" />
-</AnchorPane>
+
+<HBox alignment="CENTER" minHeight="400.0" minWidth="300.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.LoginController">
+   <children>
+      <AnchorPane id="anchorPane" fx:id="anchorPane" maxHeight="400" maxWidth="600" prefHeight="400.0" prefWidth="600.0">
+          <VBox layoutX="183.0" layoutY="114.0" prefHeight="163.0" prefWidth="233.0" spacing="20.0">
+              <Label text="LOGIN">
+                  <font>
+                      <Font name="System Bold" size="20.0" />
+                  </font>
+              </Label>
+              <TextField fx:id="txtUsername" prefHeight="290.0" prefWidth="233.0" promptText="Username" />
+              <PasswordField fx:id="txtSenha" promptText="Senha" style="-fx-padding: 5px;" />
+              <Button fx:id="btnEntrar" mnemonicParsing="false" onAction="#logar" prefHeight="32.0" prefWidth="233.0" style="-fx-background-color: #8257e5; -fx-padding: 5px;" text="Entrar" textFill="WHITE" />
+            <HBox alignment="CENTER_LEFT" spacing="5.0">
+               <children>
+                  <Text fill="#827f7f" strokeType="OUTSIDE" strokeWidth="0.0" text="Não tem uma conta?" />
+                  <Hyperlink onAction="#abrirCadastro" prefHeight="0.0" prefWidth="71.0" text="Cadastre-se" underline="true" />
+               </children>
+            </HBox>
+          </VBox>
+      </AnchorPane>
+   </children>
+</HBox>
