--- a/src/resources/MainUI.fxml
+++ b/src/resources/MainUI.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
@@ -47,9 +48,9 @@
   <children>
     <SplitPane dividerPositions="0.2505567928730512" focusTraversable="true" VBox.vgrow="NEVER">
       <items>
-            <ScrollPane fitToHeight="true" fitToWidth="true" maxWidth="300.0" minWidth="200.0">
+            <ScrollPane fitToHeight="true" fitToWidth="true">
                <content>
-                  <VBox alignment="CENTER" prefHeight="361.0" prefWidth="188.0" spacing="30.0">
+                  <VBox alignment="CENTER" spacing="30.0">
                      <children>
                         <Button id="GerenciarTanque" fx:id="btnGerenciarTanque" mnemonicParsing="false" onAction="#abrirFXML" style="-fx-background-color: transparent;">
                            <graphic>
@@ -121,7 +122,21 @@
                               </HBox>
                            </graphic>
                         </Button>
-                        <Button id="GerenciarEstoque" fx:id="btnGerenciarEstoque" mnemonicParsing="false" style="-fx-background-color: transparent;">
+                        <Button id="GerenciarInsumo" fx:id="btnGerenciarInsumo" mnemonicParsing="false" onAction="#abrirFXML" style="-fx-background-color: transparent;">
+                           <graphic>
+                              <HBox alignment="CENTER_LEFT" prefHeight="38.0" prefWidth="188.0" spacing="10.0">
+                                 <children>
+                                    <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../assets/icon/fish-food(1).png" />
+                                       </image>
+                                    </ImageView>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Gerenciar Insumo" textOrigin="CENTER" />
+                                 </children>
+                              </HBox>
+                           </graphic>
+                        </Button>
+                        <Button id="GerenciarEstoque" fx:id="btnGerenciarEstoque" mnemonicParsing="false" onAction="#abrirFXML" style="-fx-background-color: transparent;">
                            <graphic>
                               <HBox alignment="CENTER_LEFT" prefHeight="38.0" prefWidth="188.0" spacing="10.0">
                                  <children>
@@ -150,6 +165,9 @@
                            </graphic>
                         </Button>
                      </children>
+                     <padding>
+                        <Insets left="20.0" right="20.0" />
+                     </padding>
                   </VBox>
                </content>
             </ScrollPane>
