--- a/src/resources/GerenciarFornecedor.fxml
+++ b/src/resources/GerenciarFornecedor.fxml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="576.0" prefWidth="667.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application.controller.GerenciarFornecedor">
+<AnchorPane prefHeight="576.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.GerenciarFornecedor">
    <children>
       <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerenciar fornecedores">
          <font>
@@ -42,15 +33,13 @@
             </TableView>
          </children>
       </VBox>
-      <FlowPane fx:id="formularioPane" alignment="CENTER" hgap="10.0" layoutX="14.0" layoutY="269.0" prefHeight="269.0" prefWidth="573.0" vgap="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
+      <FlowPane fx:id="formularioPane" alignment="CENTER" hgap="10.0" layoutX="14.0" layoutY="268.0" prefHeight="108.0" prefWidth="639.0" vgap="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
          <children>
-            <TextField fx:id="txtNome" prefHeight="25.0" prefWidth="285.0" promptText="Nome" />
+            <TextField fx:id="txtNome" prefHeight="25.0" prefWidth="351.0" promptText="Nome" />
             <TextField fx:id="txtCNPJ" prefHeight="25.0" prefWidth="275.0" promptText="CNPJ" />
-            <TextField fx:id="txtEndereco" prefHeight="25.0" prefWidth="412.0" promptText="Endereço" />
+            <TextField fx:id="txtEndereco" prefHeight="25.0" prefWidth="480.0" promptText="Endereço" />
             <TextField fx:id="txtTempoEntrega" promptText="Tempo médio entrega" />
-            <ListView fx:id="listaProdutos" prefHeight="79.0" prefWidth="571.0" />
-            <TextArea fx:id="txtProdutos" prefHeight="73.0" prefWidth="571.0" promptText="Produtos (separados por ;)" />
-            <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="569.0" spacing="10.0">
+            <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="638.0" spacing="10.0">
                <children>
                   <Button fx:id="btnSalvar" mnemonicParsing="false" onAction="#salvar" text="Salvar" />
                   <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
