--- a/src/resources/GerenciarCliente.fxml
+++ b/src/resources/GerenciarCliente.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="576.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.GerenciarFornecedor">
+<AnchorPane prefHeight="576.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.GerenciarCliente">
    <children>
-      <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerenciar fornecedores">
+      <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerenciar cliente">
          <font>
             <Font name="Corbel Light" size="17.0" />
          </font>
@@ -27,12 +27,10 @@
                   <Button fx:id="btnExcluir" mnemonicParsing="false" onAction="#excluir" text="Excluir" />
                </children>
             </HBox>
-            <TableView fx:id="tableViewFornecedor">
+            <TableView fx:id="tableViewCliente">
               <columns>
                 <TableColumn fx:id="cNome" prefWidth="140.6666568517685" text="Nome" />
                 <TableColumn fx:id="cCNPJ" prefWidth="155.33331298828125" text="CNPJ" />
-                  <TableColumn fx:id="cEndereco" prefWidth="205.33331298828125" text="Endereço" />
-                  <TableColumn fx:id="cTempoEntrega" minWidth="-1.0" prefWidth="108.0" text="Tempo entrega" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -40,12 +38,12 @@
             </TableView>
          </children>
       </VBox>
-      <FlowPane fx:id="formularioPane" alignment="CENTER" hgap="10.0" layoutX="14.0" layoutY="268.0" prefHeight="108.0" prefWidth="646.0" vgap="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="7.0">
+      <FlowPane fx:id="formularioPane" alignment="CENTER" hgap="10.0" layoutX="11.0" layoutY="268.0" prefHeight="108.0" prefWidth="646.0" vgap="10.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="10.0">
          <children>
             <TextField fx:id="txtNome" prefHeight="25.0" prefWidth="351.0" promptText="Nome" />
             <TextField fx:id="txtCNPJ" prefHeight="25.0" prefWidth="275.0" promptText="CNPJ" />
-            <TextField fx:id="txtEndereco" prefHeight="25.0" prefWidth="480.0" promptText="Endereço" />
-            <TextField fx:id="txtTempoEntrega" promptText="Tempo médio entrega" />
+            <TextField fx:id="txtEndereco" prefHeight="25.0" prefWidth="377.0" promptText="Endereço" />
+            <TextField fx:id="txtTelefone" prefHeight="25.0" prefWidth="251.0" promptText="Telefone" />
             <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="638.0" spacing="10.0">
                <children>
                   <Button fx:id="btnSalvar" mnemonicParsing="false" onAction="#salvar" text="Salvar" />
