--- a/src/resources/GerenciarTanque.fxml
+++ b/src/resources/GerenciarTanque.fxml
@@ -1,4 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application.controller.GerenciarTanque" />
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+
+<AnchorPane prefHeight="576.0" prefWidth="654.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.GerenciarTanque">
+   <children>
+      <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerenciar tanque">
+         <font>
+            <Font name="Corbel Light" size="17.0" />
+         </font>
+      </Text>
+      <VBox alignment="TOP_RIGHT" layoutX="14.0" layoutY="60.0" prefHeight="200.0" prefWidth="633.0" spacing="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
+         <children>
+            <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="411.0" spacing="10.0">
+               <children>
+                  <Button fx:id="btnAdicionar" mnemonicParsing="false" onAction="#adicionar" text="Adicionar" />
+                  <Button fx:id="btnEditar" mnemonicParsing="false" onAction="#editar" text="Editar" />
+                  <Button fx:id="btnExcluir" mnemonicParsing="false" onAction="#excluir" text="Excluir" />
+               </children>
+            </HBox>
+            <TableView fx:id="tableViewTanque" fixedCellSize="0.0" prefHeight="165.0" prefWidth="547.0">
+              <columns>
+                <TableColumn fx:id="cEspecie" prefWidth="140.6666568517685" text="Espécie" />
+                <TableColumn fx:id="cDataInicio" prefWidth="155.33331298828125" text="Data início" />
+                  <TableColumn fx:id="cQuantidadePeixes" prefWidth="205.33331298828125" text="Quantidade peixes" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+         </children>
+      </VBox>
+      <FlowPane fx:id="formularioPane" alignment="CENTER" hgap="10.0" layoutX="14.0" layoutY="399.0" prefHeight="108.0" prefWidth="647.0" vgap="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
+         <children>
+            <ComboBox fx:id="cbEspecie" prefHeight="25.0" prefWidth="179.0" promptText="Espécie" />
+            <TextField fx:id="txtQuantidadePeixes" prefHeight="25.0" prefWidth="129.0" promptText="Quantidade peixes" />
+            <TextField fx:id="txtPrecoManutencao" prefHeight="25.0" prefWidth="132.0" promptText="Preço manutenção" />
+            <TextField fx:id="txtDataInicio" prefHeight="25.0" prefWidth="147.0" promptText="Data início" />
+            <TextField fx:id="txtPesoMedioInicio" prefHeight="25.0" prefWidth="161.0" promptText="Peso médio inicial" />
+            <TextField fx:id="txtPesoMedioAtual" prefHeight="25.0" prefWidth="161.0" promptText="Peso médio atual" />
+            <TextField fx:id="txtQuantidadeRacaoDiaria" prefHeight="25.0" prefWidth="161.0" promptText="Quantidade ração diária" />
+            <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="633.0" spacing="10.0">
+               <children>
+                  <Button fx:id="btnSalvar" mnemonicParsing="false" onAction="#salvar" text="Salvar" />
+                  <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
+               </children>
+            </HBox>
+         </children>
+      </FlowPane>
+      <TableView fx:id="tableViewHistoricoSemanal" layoutX="14.0" layoutY="286.0" prefHeight="95.0" prefWidth="634.0">
+        <columns>
+          <TableColumn fx:id="cDataLancada" prefWidth="193.3333387374878" text="Data lançada" />
+          <TableColumn fx:id="cPesoMedio" prefWidth="171.3333282470703" text="Peso médio" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Text layoutX="14.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Histórico semanal" />
+   </children>
+</AnchorPane>
