--- a/src/resources/GerenciarInsumo.fxml
+++ b/src/resources/GerenciarInsumo.fxml
@@ -12,14 +12,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="576.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.GerenciarPeixe">
+<AnchorPane prefHeight="576.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.GerenciarInsumo">
    <children>
-      <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerenciar peixes">
+      <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerenciar insumo">
          <font>
             <Font name="Corbel Light" size="17.0" />
          </font>
       </Text>
-      <VBox alignment="TOP_RIGHT" layoutX="14.0" layoutY="60.0" prefHeight="200.0" prefWidth="571.0" spacing="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
+      <VBox alignment="TOP_RIGHT" layoutX="14.0" layoutY="60.0" prefHeight="200.0" spacing="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
          <children>
             <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="411.0" spacing="10.0">
                <children>
@@ -28,10 +28,11 @@
                   <Button fx:id="btnExcluir" mnemonicParsing="false" onAction="#excluir" text="Excluir" />
                </children>
             </HBox>
-            <TableView fx:id="tableViewPeixe">
+            <TableView fx:id="tableViewInsumo">
               <columns>
-                <TableColumn fx:id="cEspecie" prefWidth="140.6666568517685" text="Espécie" />
-                <TableColumn fx:id="cRacaoConsumida" prefWidth="155.33331298828125" text="Ração consumida" />
+                <TableColumn fx:id="cNome" prefWidth="140.6666568517685" text="Nome" />
+                <TableColumn fx:id="cFornecedor" prefWidth="155.33331298828125" text="Fornecedor" />
+                 <TableColumn fx:id="cValor" prefWidth="155.33331298828125" text="Valor" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -39,12 +40,12 @@
             </TableView>
          </children>
       </VBox>
-      <FlowPane fx:id="formularioPane" hgap="10.0" layoutX="14.0" layoutY="268.0" prefHeight="108.0" prefWidth="646.0" vgap="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
+      <FlowPane fx:id="formularioPane" hgap="10.0" layoutX="11.0" layoutY="268.0" prefHeight="108.0" prefWidth="646.0" vgap="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
          <children>
-            <TextField fx:id="txtEspecie" prefHeight="25.0" prefWidth="351.0" promptText="Espécie" />
-            <TextField fx:id="txtPesoVenda" prefHeight="25.0" prefWidth="275.0" promptText="Peso venda" />
-            <ComboBox fx:id="cbRacaoConsumida" prefHeight="25.0" prefWidth="239.0" promptText="Ração consumida" />
-            <TextField fx:id="txtQuantidadeRacaoDiaria" prefHeight="25.0" prefWidth="179.0" promptText="Quantidade Ração Diária (g)" />
+            <TextField fx:id="txtNome" prefHeight="25.0" prefWidth="257.0" promptText="Nome" />
+            <TextField fx:id="txtQuantidade" prefHeight="25.0" prefWidth="195.0" promptText="Quantidade inicial" />
+            <TextField fx:id="txtValor" prefHeight="25.0" prefWidth="166.0" promptText="Valor" />
+            <ComboBox fx:id="cbFornecedor" prefHeight="25.0" prefWidth="258.0" promptText="Fornecedor" />
             <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="638.0" spacing="10.0">
                <children>
                   <Button fx:id="btnSalvar" mnemonicParsing="false" onAction="#salvar" text="Salvar" />
